2008-10-31  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spatial.hh, spatial.cc (intersect_to_buffers): New
	implementation which allows index_maps for different MPI processes
	to overlap.  The new algorithm is O (NP^2) where N is the number of
	indices and P the number of processes.  (The old one was O (N).)

	* music/permutation_index.hh, permutation_index.cc: Implemented.

	* music/index_map.hh (index_map): Use value semantics (so that we
	can copy the position by copying the iterator).

	* music/linear_index.hh (linear_index): Ditto.

2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* spatial.cc: Bugfix: Changed MPI::INTEGER (Fortran) -> MPI::INT

	* spatial.hh (TRANSMITTED_INTERVALS_MAX): New constant.

	* spatial.cc (spatial_negotiator::send,
	spatial_negotiator::receive): Allow transmission of an arbitrary
	number of spatial negotiation intervals.

	* subconnector.hh (SPIKE_BUFFER_MAX): New constant.

	* subconnector.cc (event_output_subconnector::send,
	event_input_subconnector_global, event_input_subconnector_local):
	Allow transmission of an arbitrary number of spikes.

	* spatial.cc (spatial_output_negotiator::negotiate): Bugfix: Use
	remote_n_proc instead of n_processes when sending to remote side.

	* music/application_map.hh, application_map.cc, index_map.cc,
	music/interval.hh, music/interval_tree.hh, music/ioutils.hh,
	ioutils.cc, music/spatial.hh, spatial.cc, music/subconnector.hh,
	subconnector.cc, music/temporal.hh, temporal.cc: New files.

	* Changes throughout to implement propagation of configuration
	information and routing of spikes.

2008-10-16  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/FIBO.hh (FIBO::buffer): Bugfix: Changed to vector of char
	instead of char*.

2008-10-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (port::is_connected): Make sure this
	method works also in the runtime phase.

2008-10-13  Mikael Djurfeldt  <mikael@djurfeldt.com>
